css/screen.css
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

/* Global Reset */

* {
  margin: 0;
  padding: 0;
}

html, body {
  height: 100%;
}

body {
  background-color: #C82A45;
  color: #fff;
  font-family: 'Oswald', sans-serif;
  webkit-font-smoothing:subpixel-antialiased;
  text-align: center;
}

h1 {
  margin-bottom: 1em;
}

p {
  margin: 1em 0;
}

a {
  color: #fff;
  text-decoration: none;
}

a:hover {
  color: #C82A45;
  border-bottom: #C82A45 solid 1px;
  text-decoration: none;
}

table {
  font-size: inherit;
  font: 100%;
}

.page {
  clear: both;
}



/*****************************************************************************/
/*
/* Home
/*
/*****************************************************************************/

.header {
  position:fixed;
  right:30px;
  top:50px;
  z-index:100;
  width: 180px;
}

.header img {
  max-width: 91px;
  max-height: 63px;
  margin-bottom: 20px;
  display: block;
}

.header nav li{
  list-style: none;
  text-align: left;
  font-size: 14px;
  cursor: pointer;
  margin-bottom: 8px;
}

.header nav li:hover{
  text-decoration: underline;
}

ul.posts {
  list-style-type: none;
  margin-bottom: 2em;
}

ul.posts span {
  color: #aaa;
  font-family: Monaco, "Courier New", monospace;
  font-size: 80%;
}

h2 {
  text-align: left;
  font-size: 40px;
  margin-top: 80px;
  max-width: 960px;
}

h3 {
  font-size: 40px;
  text-align: left;
  text-transform: uppercase;
  margin-top: 80px;
}

h3 span {
  font-size: 24px;
}

h4 {
  text-transform: uppercase;
  text-align: left;
  font-size: 24px;
}

h5 {
  text-align: left;
  font-size: 24px;
  font-style: italic;
  font-weight: 300;
}

p { 
  width: 960px;
  font-weight: 300;
  font-size: 20px;
  text-align: left;
}

.span6,
.span6 p {
  width: 450px;
  float: left;
}

/****************************************************************************/
/*
/* Site
/*
/*****************************************************************************/

.site {

}

.title {
  color: #333;
  font-weight: bold;
  margin-bottom: 2em;
  font-size:48px;
  padding:10px;
  border-bottom:solid 1px #ccc;
  font-family: 'Changa One', cursive;
  margin-left:-40px;
  padding-left:40px;
  height:40px;
}

.line {
  border: white solid 2px;
  width: 200px;
  margin: 20px 0px;
}

.clear{ 
  clear:both;
}

.quote{ 
  position:relative;
  width:100%;
  height:100%;
    margin: 80px;
  }

.quote h1{ 
  text-align:left;
  color:#fff;
  margin:80px 80px;
  max-width: 900px;
  font-size: 56px;
  text-shadow: 0px 4px 9px rgba(0, 0, 0, 1);0px rgba(255, 255, 255, 0.4);
}

.bgimg{ 
  position:fixed;
  top:0px; 
  bottom:0px;
  left:0px;
  right:0px;
  z-index:-10;
  opacity:0;
}

.story {
  width: 960px;
  margin: 0 auto;
}

.year {
  text-align: center;
}

.year h1 {
  font-size: 200px;
  text-align: center;
  margin: 80px auto 0;
  text-shadow: none;
}

.year h3 {
  font-size: 56px;
  margin: 0px 0 30px;
}

.year img {
  max-width: 184px;
  max-height: 250px;
}

.year h2 {
  font-size: 72px;
}

.cityLeaders iframe {
  margin: 0 auto;
  display: block;
}

.quote .bigtext h1 {
  font-size: 73px;
  text-transform: uppercase;
}

.thanks {
  width: 960px;
}

.thanks h2 {
  text-align: center;
  text-transform: uppercase;
  margin: 500px auto 30px;
}

.thanks img {
  max-height: 60px;
  max-width: 242px;
}

.bioright {
  margin-left: 15px;
}

.bios {
  margin: 30px auto;
  float: left;
}

.bios h3 {
  margin-top: 15px;
}

.bios p {
  margin-top: 0px;
}

.getinvolved h1 {
  margin: 0px;
}
}

